Added Style and Script sheets

--- a/index.html
+++ b/index.html
@@ -3,18 +3,8 @@
     <head>
         <meta charset="utf-8">
         <link rel="icon" id="icon">
-        <script>
-            const icon = document.getElementById('icon');
-            const isDark = window.matchMedia("(prefers-color-scheme: dark)");
-            const logoWhite = "img/Icon White.svg";
-            const logoBlack = "img/Icon Black.svg";
-
-            if (isDark.matches) {
-                icon.href=logoWhite;
-            } else {
-                icon.href=logoBlack;
-            }
-        </script>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
     <body>
         yo le site marche à peu près
