Started serious work

--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" id="icon">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
         <script src="script.js"></script>
+        <title>Heel Clan - Home</title>
     </head>
     <body>
-        yo le site marche à peu près
+        <div class="header">
+            <img src="img/placeholder-69.png">
+        </div>
+        <div class="navbar">
+            <div class="logo">
+
+            </div>
+            <div class="menu">
+                <a href="#Home">Home</a>
+                <a href="#Teams">Teams</a>
+                <a href="#Results">Latest results</a>
+                <a href="#Book">Book a match</a>
+            </div>
+        </div>
+        <p>
+            bruh
+        </p>
     </body>
 </html>
