--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="header">
-            <img src="img/placeholder-69.png">
+            <img src="img/Heel clan website banner test.svg" height="800">
         </div>
         <div class="navbar">
             <div class="logo">
