--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="#Teams">Teams</a>
                 <a href="#Results">Latest results</a>
                 <a href="#Book">Book a match</a>
-                test
+                test 2
             </div>
         </div>
         <p>
