test for the workflow

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="header">
-            <img src="img/Heel clan website banner test.svg" height="800">
+            <img src="img/Heel clan website banner test.png" height="auto" width="auto">
         </div>
         <div class="navbar">
             <div class="logo">
