--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
     </head>
     <body>
         <div class="header">
-            <img src="img/Heel clan website banner test.png" height="auto" width="auto">
+            <img src="img/Heel clan website banner test.png" height="auto" width="70%">
         </div>
         <div class="navbar">
             <div class="logo">
-
+                <img src="img/Icon White.svg" height="auto" width="6%">
             </div>
             <div class="menu">
-                <a href="#Home">Home</a>
-                <a href="#Teams">Teams</a>
-                <a href="#Results">Latest results</a>
-                <a href="#Book">Book a match</a>
+                <a href="./index.html">Home</a>
+                <a href="./teams/index.html">Teams</a>
+                <a href="./results/index.html">Latest results</a>
+                <a href="./booking/index.html">Book a match</a>
+                <a href="./recruitment/index.html">Recruitment</a>
             </div>
         </div>
         <p>
