Updated navbar titles

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="menu">
                 <a href="./index.html">Home</a>
                 <a href="./teams/index.html">Teams</a>
-                <a href="./results/index.html">Latest results</a>
+                <a href="./results/index.html">Results</a>
                 <a href="./booking/index.html">Book a match</a>
-                <a href="./recruitment/index.html">Recruitment</a>
+                <a href="./recruitment/index.html">Join us</a>
             </div>
         </div>
         <p>
