--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <p>
-            bruh bruh bruh
+            bruh bruh bruh but experimental
         </p>
     </body>
 </html>
