Worked a lot, brother

--- a/index.html
+++ b/index.html
@@ -12,23 +12,29 @@
         <title>Heel Clan - Home</title>
     </head>
     <body>
-        <div class="header">
-            <img src="img/Heel clan website banner test.png" height="auto" width="70%">
-        </div>
         <div class="navbar">
             <div class="logo">
-                <img src="img/Icon White.svg" height="auto" width="6%">
+                <img src="/img/Icon White.svg" height="auto" width="6%" id="homeLogo">
             </div>
             <div class="menu">
-                <a href="./index.html">Home</a>
-                <a href="./teams/index.html">Teams</a>
-                <a href="./results/index.html">Results</a>
-                <a href="./booking/index.html">Book a match</a>
-                <a href="./recruitment/index.html">Join us</a>
+                <a href="/index.html" class="active">Home</a>
+                <a href="/teams/index.html">Teams</a>
+                <a href="/results/index.html">Results</a>
+                <a href="/booking/index.html">Book a match</a>
+                <a href="/recruitment/index.html">Join us</a>
             </div>
         </div>
+        <div class="header">
+            <img src="img/Heel clan website banner test.png" height="auto" width="70%" href="/index.html">
+        </div>
         <p>
-            bruh bruh bruh but experimental
+            bruh
+        </br>bruh
+        </br>bruh
+        </br>bruh
+        </br>bruh
+        </br>bruh
+        </br>bruh
         </p>
     </body>
 </html>
