--- a/teams/index.html
+++ b/teams/index.html
@@ -4,13 +4,37 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" id="icon">
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-        <script src="script.js"></script>
+        <script src="/script.js"></script>
         <title>Heel Clan - Teams</title>
     </head>
     <body>
+        <div class="navbar">
+            <div class="logo">
+                <img src="/img/Icon White.svg" height="auto" width="6%">
+            </div>
+            <div class="menu">
+                <a href="/index.html">Home</a>
+                <a href="/teams/index.html" class="active">Teams</a>
+                <a href="/results/index.html">Results</a>
+                <a href="/booking/index.html">Book a match</a>
+                <a href="/recruitment/index.html">Join us</a>
+            </div>
+        </div>
+        <div class="header">
+            <img src="/img/Heel clan website banner test.png" height="auto" width="70%" href="/index.html">
+        </div>
+        <p>
+            bruh
+        </br>bruh
+        </br>bruh
+        </br>bruh
+        </br>bruh
+        </br>bruh
+        </br>bruh
+        </p>
     </body>
 </html>
