Color scheme settings done

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-        <script src="script.js"></script>
+        <script src="/Favicon.js"></script>
         <title>Heel Clan - Home</title>
     </head>
     <body>
         <div class="navbar">
             <div class="logo">
                 <img src="/img/Icon White.svg" height="auto" width="6%" id="homeLogo">
+                <script src="/Logo.js"></script>
             </div>
             <div class="menu">
                 <a href="/index.html" class="active">Home</a>
