--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="navbar">
             <div class="logo">
-                <img src="/img/Icon White.svg" height="auto" width="6%" id="homeLogo">
+                <a href="/index.html"><img src="/img/Icon White.svg" height="auto" width="6%" id="homeLogo"></a>
                 <script src="/Logo.js"></script>
             </div>
             <div class="menu">
@@ -26,16 +26,12 @@
             </div>
         </div>
         <div class="header">
-            <img src="img/Heel clan website banner test.png" height="auto" width="70%" href="/index.html">
+            <img src="/img/Heel clan website banner test.png" height="auto" width="100%">
         </div>
-        <p>
-            bruh
-        </br>bruh
-        </br>bruh
-        </br>bruh
-        </br>bruh
-        </br>bruh
-        </br>bruh
-        </p>
+        <div class="body">
+            <p>
+                
+            </p>
+        </div>
     </body>
 </html>
