Some work with the scrollbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
         <script src="/Favicon.js"></script>
         <title>Heel Clan - Home</title>
     </head>
@@ -32,6 +35,15 @@
             <p>
                 
             </p>
+        </div>
+        <div class="footer">
+            <div class="info">
+                
+            </div>
+            <div class="legal">
+                <p style="text-align:left;float:left;">© 2022, EU - <strong>Heel Clan</strong></p>
+                <p style="text-align:right;float:right;">Web design by <strong>Heel Software Services</strong></p>
+            </div>
         </div>
     </body>
 </html>
