A lot of frontend... again

--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
     <body>
         <div class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="/img/Icon White.svg" height="auto" width="6%" id="homeLogo"></a>
+                <a href="/"><img src="/img/Icon White.svg" height="auto" width="6%" id="homeLogo"></a>
                 <script src="/Logo.js"></script>
             </div>
             <div class="menu">
-                <a href="/index.html" class="active">Home</a>
-                <a href="/teams/index.html">Teams</a>
-                <a href="/results/index.html">Results</a>
-                <a href="/booking/index.html">Book a match</a>
-                <a href="/recruitment/index.html">Join us</a>
+                <a href="/" class="active">Home</a>
+                <a href="/teams/">Teams</a>
+                <a href="/results/"><strike>Results</strike></a>
+                <a href="/booking/"><strike>Book a match</strike></a>
+                <a href="/recruitment/"><strike>Join us</strike></a>
+            </div>
+            <div class="account">
+                <a href="/account/"></a>
             </div>
         </div>
         <div class="header">
@@ -38,11 +41,26 @@
         </div>
         <div class="footer">
             <div class="info">
-                
+                <div class="socials">
+                    <accent>Check out our socials !</accent>
+                    <br><a href="https://discord.gg/ECqAJNmvef" id="dis"><img src="/img/discord_logo.svg" height="20px" width="20px" id="l_dis"> Discord</a>
+                    <br><a href="" id="twi"><img src="/img/twitter_logo.svg" height="20px" width="20px" id="l_twi"> Twitter</a>
+                    <br><a href="" id="ins"><img src="/img/instagram_logo.svg" height="20px" width="20px" id="l_ins"> Instagram</a>
+                    <br><a href="" id="ttv"><img src="/img/twitch_logo.svg" height="20px" width="20px" id="l_ttv"> Twitch</a>
+                    <br><a href="https://www.youtube.com/channel/UCUad12eHavWluVfnzjgp6FA" id="ytb"><img src="/img/youtube_logo.svg" height="20px" width="20px" id="l_ytb"> Youtube</a>
+                </div>
+                <div class="presentation">
+                    <accent>Heel Clan</accent>
+                    <br><a href="/">News</a>
+                    <br><a href="/teams/">Teams</a>
+                    <br><a href="/results/">Results</a>
+                    <br><a href="/booking/">Book a match</a>
+                    <br><a href="/recruitment/">Join us</a>
+                </div>
             </div>
             <div class="legal">
                 <p style="text-align:left;float:left;">© 2022, EU - <strong>Heel Clan</strong></p>
-                <p style="text-align:right;float:right;">Web design by <strong>Heel Software Services</strong></p>
+                <p style="text-align:right;float:right;">Web design by <a href="http://heelsoft.tk"><strong>Heel Software Services</strong></a></p>
             </div>
         </div>
     </body>
