Fixed wrong port on PHP config

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="/teams/">Teams</a>
                 <a href="/results/"><strike>Results</strike></a>
                 <a href="/booking/"><strike>Book a match</strike></a>
-                <a href="/recruitment/"><strike>Join us</strike></a>
+                <a href="/recruitment/">Join us</a>
             </div>
             <div class="account">
                 <a href="/account/"></a>
